# EZYSql

./: CMakeLists.txt
lib/: SideBar.hpp  Sql.hpp  window.hpp
src/: Sql.cpp  main.cpp  window.cpp
